--- a/index.html
+++ b/index.html
@@ -62,30 +62,28 @@
         </div>  
       </div>
     </div>
-    <div id="about-me" class="row section">
-      <div class="col-lg-8 col-lg-offset-2">
-        <h4 class="underlined">ABOUT ME</h4>
-        <div class="row">
-          <div class="col-lg-10 col-lg-offset-1">
-            <div class="wow fadeIn">
-              <p>Hi. I am Sudharsanan from India. Currently a Grad Student in Computer Science at University of Texas, Dallas. I am a Hacker, Blogger, Freelancer &amp; a huge Gadget Freak.</p>
-              <p>A Full Stack web developer who loves to build awesome Web apps. A Rubyist riding <a href="http://rubyonrails.org/">Rails</a>. Also loves to build some awesome Android apps. Currently exploring the world of <a href="http://emberjs.com">Ember</a>.
-              </p>
-              <p>
-                When I am not building anything I spend time playing games on my Xbox 360 or riding the Bike.
-              </p>
-            </div>
+    <div id="about-me">
+      <div class="row section">
+        <div class="col-lg-6 col-lg-offset-3">
+          <h4 class="underlined">ABOUT ME</h4>
+          <div class="content wow fadeIn">
+            <p>Hi. I am Sudharsanan from India. Currently a Grad Student in Computer Science at University of Texas, Dallas. I am a Hacker, Blogger, Freelancer &amp; a huge Gadget Freak.</p>
+            <p>A Full Stack web developer who loves to build awesome Web apps. A Rubyist riding <a href="http://rubyonrails.org/">Rails</a>. Also loves to build some awesome Android apps. Currently exploring the world of <a href="http://emberjs.com">Ember</a>.
+            </p>
+            <p>
+              When I am not building anything I spend time playing games on my Xbox 360 or riding the Bike.
+            </p>
           </div>
         </div>
       </div>
     </div>
-    <div id="work" class="row section">
-      <div class="col-lg-8 col-lg-offset-2">
-        <h4 class="underlined">WHAT I DO</h4>
-        <div class="row">
-          <div class="col-lg-10 col-lg-offset-1">
+    <div id="work">
+      <div class="row section">
+        <div class="col-lg-6 col-lg-offset-3">
+          <h4 class="underlined">WHAT I DO</h4>
+          <div class="content">
             <p>I strive to create simple, clean &amp; responsive Web as well as Mobile apps. and I also embrace Minimalistic design. Here are some of the technologies I use daily to create awesome Apps!</p>
-            <div class="wow bounceIn" id="tech">
+            <div id="tech-stack" class="wow bounceIn">
               <div class="row">
                 <div class="col-lg-3">
                   <img src="assets/img/ruby.png" alt="Ruby">
@@ -119,122 +117,109 @@
         </div>
       </div>
     </div>
-    <!-- <div id="skills" class="row section">
-      <div class="col-lg-8 col-lg-offset-2">
-        <h4>SKILLS</h4>
-        <div class="row">
-          <div class="col-lg-10 col-lg-offset-1">
-            <div id="skill-set" class="wow fadeIn">
-              <div class="row">
-                <div class="col-lg-2">
-                  <img src="assets/img/ruby-icon.png" alt="Ruby" class="skill-icon">
-                </div>
-                <div class="col-lg-10">
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-ruby" data-transitiongoal="78">
-                    </div>
-                  </div>
+    <div id="projects">
+      <div class="row section">
+        <div class="col-lg-10 col-lg-offset-1">
+          <h4 class="underlined">PROJECTS</h4>
+          <div class="content wow bounceIn">
+            <div class="row">
+              <div class="col-lg-3">
+                <div class="rails-item item">
+                  <img src="assets/img/rails-128.png" alt="Rails">
+                  <h4 class="wh-text">TWITTER CLONE</h4>
+                </div>  
+              </div>
+              <div class="col-lg-3">
+                <div class="android-item item">
+                  <img src="assets/img/android-128.png" alt="Android">
+                  <h4 class="wh-text">REDDIT CLIENT</h4>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-lg-2">
-                  <img src="assets/img/android-icon.png" alt="Android" class="skill-icon">
-                </div>
-                <div class="col-lg-10">
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-android" data-transitiongoal="90">
-                    </div>
-                  </div>
+              <div class="col-lg-3">
+                <div class="css-item item">
+                  <img src="assets/img/css3-128.png" alt="CSS3">
+                  <h4 class="wh-text">PORTFOLIO</h4>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-lg-2">
-                  <img src="assets/img/rails-icon.png" alt="Rails" class="skill-icon">
-                </div>
-                <div class="col-lg-10">
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-rails" data-transitiongoal="85">
-                    </div>
-                  </div>
-                </div>
-              </div>                
-              <div class="row">
-                <div class="col-lg-2">
-                  <img src="assets/img/ember-icon.png" alt="Ember" class="skill-icon">
-                </div>
-                <div class="col-lg-10">
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-ember" data-transitiongoal="72">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <div id="projects" class="row section">
-      <div class="col-lg-8 col-lg-offset-2">
-        <h4 class="underlined">PROJECTS</h4>
-        <div class="row">
-          <div class="col-lg-10 col-lg-offset-1 wow fadeIn">
-            <div id="projects-owl" class="owl-carousel">
-              <div class="rails-item item">
-                <div class="project-name">
-                  <img src="assets/img/ruby-icon.png" alt="Rails">
-                  <h4>TWITTER CLONE</h4>
-                </div>
-                <div class="project-details">
-                  <h4>TWITTER CLONE</h4>
-                </div>
-              </div>
-              <div class="android-item item">
-                <div class="project-name">
-                  <img src="assets/img/android-icon.png" alt="Android">
-                </div>
-                <div class="project-details">
-                  <h4>REDDIT CLIENT</h4>
-                </div>
-              </div>
-              <div class="ember-item item">
-                <div class="project-name">
-                  <br><br>
+              <div class="col-lg-3">
+                <div class="ember-item item">
                   <img src="assets/img/ember-logo.png" alt="Ember">
-                </div>
-                <div class="project-details">
                   <h4>TODO0</h4>
+                </div>  
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-3">
+                <div class="bootstrap-item item">
+                  <img src="assets/img/bootstrap-512.png" alt="Bootstrap">
+                  <h4 class="wh-text">PAPER</h4>
+                </div>  
+              </div>
+              <div class="col-lg-3">
+                <div class="rails-item item">
+                  <img src="assets/img/rails-128.png" alt="Rails">
+                  <h4 class="wh-text">2CENTS</h4>
                 </div>
               </div>
-              <div class="bootstrap-item item">
-                <h4>PORTFOLIO</h4>
+              <div class="col-lg-3">
+                <div class="js-item item">
+                  <img src="assets/img/js-128.png" alt="Javascript">
+                  <h4>SLIDER PANEL JS</h4>
+                </div>
               </div>
-              <div class="js-item item">
-                <h4>SLIDER PANEL.JS</h4>
-              </div>
-              <div class="rails-item item">
-                <h4>2CENTS</h4>
-              </div>
-              <div class="bootstrap-item item">
-                <h4>PAPER</h4>
-              </div>
-              <div class="android-item item">
-                <h4>BARREL RACE</h4>
+              <div class="col-lg-3">
+                <div class="android-item item">
+                  <img src="assets/img/android-128.png" alt="Android">
+                  <h4 class="wh-text">BARREL RACE</h4>
+                </div>
               </div>
             </div>
-            <div class="customNavigation">
-              <a class="prev"><i class="fa fa-arrow-left"></i></a>
-              <a class="next"><i class="fa fa-arrow-right"></i></a>
+          </div>
+          <!-- <div id="projects-owl" class="owl-carousel">
+            <div class="rails-item item">
+              <div class="project-name">
+                <h4>TWITTER CLONE</h4>
+              </div>
+              <div class="project-details">
+                <h4>TWITTER CLONE</h4>
+              </div>
+            </div>
+            <div class="android-item item">
+              <div class="project-name">
+                <h4>REDDIT CLIENT</h4>
+              </div>
+              <div class="project-details">
+                <h4>REDDIT CLIENT</h4>
+              </div>
+            </div>
+            <div class="ember-item item">
+              <div class="project-name">
+                <h4>TODO0</h4>
+              </div>
+              <div class="project-details">
+                <h4>TODO0</h4>
+              </div>
+            </div>
+            <div class="bootstrap-item item">
+              <h4>PORTFOLIO</h4>
+            </div>
+            <div class="js-item item">
+              <h4>SLIDER PANEL.JS</h4>
+            </div>
+            <div class="rails-item item">
+              <h4>2CENTS</h4>
+            </div>
+            <div class="bootstrap-item item">
+              <h4>PAPER</h4>
+            </div>
+            <div class="android-item item">
+              <h4>BARREL RACE</h4>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4">
-            <img src="assets/img/octocat.jpg" alt="Octocat">
-          </div>
-          <div class="col-lg-8">
-            <p>I love contributing to Github.</p>
-          </div>
+          <div class="customNavigation">
+            <a class="prev"><i class="fa fa-arrow-left"></i></a>
+            <a class="next"><i class="fa fa-arrow-right"></i></a>
+          </div> -->
         </div>
       </div>
     </div>
