Add parse, contact form mail

--- a/index.html
+++ b/index.html
@@ -284,6 +284,25 @@
         </div>
       </div>
     </div>
+    <div id="contact">
+      <div class="row section">
+        <div class="col-lg-4 col-lg-offset-4">
+          <h4 class="underlined">CONTACT</h4>
+          <form id="contact-form">
+            <div class="form-group">
+              <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+            </div>
+            <div class="form-group">
+              <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <textarea id="message" class="form-control"  name="message" placeholder="Message" cols="30" rows="5"></textarea>
+            </div>
+            <button type="submit" class="btn btn-default btn-block">Send Message</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
   <script type="text/javascript" src="assets/js/jquery-2.1.3.min.js"></script>
   <script type="text/javascript" src="assets/js/jquery.easing.min.js"></script>
@@ -292,6 +311,7 @@
   <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
   <script type="text/javascript" src="assets/js/scrolling-nav.js"></script>
   <script type="text/javascript" src="assets/js/wow.min.js"></script>
+  <script type="text/javascript" src="assets/js/parse-1.4.2.min.js"></script>
   <script type="text/javascript" src="assets/js/util.js"></script>
   <!-- <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
