--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/css/owl.carousel.css">
   <link rel="stylesheet" href="assets/css/owl.theme.css">
   <link rel="stylesheet" href="assets/css/styles.css">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 <body>
   <a href="#topnav" class="back-to-top page-scroll">
@@ -292,7 +292,8 @@
       <div class="row section">
         <div class="col-lg-4">
           <h5>Copyright © 2015</h5>
-          <a href="https://github.com/sudharti" target="_blank">@sudharti</a>
+          <h5>•</h5>
+          <h5>Created by</h5><a href="https://github.com/sudharti" target="_blank">@sudharti</a>
         </div>
       </div>
     </div>
@@ -307,7 +308,7 @@
   <script type="text/javascript" src="assets/js/jquery.validate.js"></script>
   <script type="text/javascript" src="assets/js/parse-1.4.2.min.js"></script>
   <script type="text/javascript" src="assets/js/util.js"></script> 
-  <!-- <script>
+  <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -316,6 +317,6 @@
     ga('create', 'UA-59264101-1', 'auto');
     ga('send', 'pageview');
 
-  </script> -->
+  </script>
 </body>
 </html>
