--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Sudharsanan Muralidharan - Portfolio</title>
-  <meta name="description" content="">
+  <title>Sudharsanan Muralidharan - Full stack developer</title>
+  <meta name="description" content="Sudharsanan Muralidharan is a Full stack developer &amp; Grad student at University of Texas, Dallas.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/font-awesome.css">
