--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
     <div id="work">
       <div class="row section">
         <div class="col-lg-6 col-sm-8 col-xs-10 col-lg-offset-3 col-sm-offset-2 col-xs-offset-1">
+          <h4 class="underlined">WORK</h4>
+          <p>
+            I have quite a bit of work experience in Software development. Apart from my professional work experience at Tata Consultancy Services and Copart.inc I do have experience as a freelance Rails developer.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div id="what-i-do">
+      <div class="row section">
+        <div class="col-lg-6 col-sm-8 col-xs-10 col-lg-offset-3 col-sm-offset-2 col-xs-offset-1">
           <h4 class="underlined">WHAT I DO</h4>
           <p>I strive to create simple, clean &amp; responsive Web as well as Mobile apps. and I also embrace Minimalistic design. Here are some of the technologies I use daily to create awesome Apps!</p>
           <br><br>
