--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
     <div id="footer">
       <div class="row section">
         <div class="col-lg-4">
-          <h5>Copyright © 2015</h5>
+          <h5>Copyright © 2016</h5>
           <h5>•</h5>
-          <h5>Created by</h5>
+          <h5>Made with &#10084; by</h5>
           <a href="https://github.com/sudharti" target="_blank">@sudharti</a>
         </div>
       </div>
