--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="page-scroll" href="#work">WORK</a>
             </li>
             <li>
-              <a href="https://www.dropbox.com/s/s7u893nuhs7cpl4/Resume.pdf?dl=0" target="_blank">RESUME</a>
+              <a href="docs/Sudharsanan_M_Resume.pdf" target="_blank">RESUME</a>
             </li>
             <li>
               <a class="page-scroll" href="#projects">PROJECTS</a>
