--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <title>Sudharsanan Muralidharan - Full stack developer</title>
+  <title>Sudharsanan Muralidharan - Online portfolio</title>
   <meta content="Sudharsanan Muralidharan is a Full stack developer &amp; Grad student at University of Texas, Dallas." name="description">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
