--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h3 class="wh">
           <b>SUDHARSANAN MURALIDHARAN</b>
         </h3>
-        <h5 class="wh">FULL STACK DEVELOPER</h5>
+        <h5 class="wh">FULL STACK DEVELOPER | GRAD STUDENT AT UTDALLAS</h5>
         <div id="social">
           <a href="https://www.linkedin.com/in/sudharsananm" target="_blank">
             <i class="fa fa-linkedin"></i>
@@ -173,7 +173,7 @@
     </div>
     <div id="projects">
       <div class="row section">
-        <div class="col-lg-10 col-lg-offset-1">
+        <div class="col-lg-12">
           <h4 class="underlined">PROJECTS</h4>
           <div class="wow fadeIn">
             <div class="row">
