--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
     <div id="projects">
       <div class="row section">
-        <div class="col-lg-12">
+        <div class="col-xs-10 col-xs-offset-1">
           <h4 class="underlined">PROJECTS</h4>
           <div class="wow fadeIn">
             <div class="row">
