--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="page-scroll" href="#work">WORK</a>
             </li>
             <li>
-              <a href="docs/Sudharsanan_M_Resume.pdf" target="_blank">RESUME</a>
+              <a href="docs/Sudharsanan-Resume.pdf" target="_blank">RESUME</a>
             </li>
             <li>
               <a class="page-scroll" href="#projects">PROJECTS</a>
@@ -351,7 +351,7 @@
             <span id="year"></span>
           </h5>
           <h5>•</h5>
-          <h5>Made with &#10084; by</h5>
+          <h5>Designed with &#10084; by</h5>
           <a href="https://github.com/sudharti" target="_blank">@sudharti</a>
         </div>
       </div>
