--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h3 class="wh">
           <b>SUDHARSANAN MURALIDHARAN</b>
         </h3>
-        <h5 class="wh">FULL STACK DEVELOPER | GRAD STUDENT AT UTDALLAS</h5>
+        <h5 class="wh">GRAD STUDENT | FULL STACK DEVELOPER</h5>
         <div class="hidden-xs" id="social">
           <a href="https://www.linkedin.com/in/sudharsananm" target="_blank">
             <i class="fa fa-linkedin"></i>
