--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <a href="https://github.com/sudharti" target="_blank">
             <i class="fa fa-github"></i>
           </a>
-          <a href="https://twitter.com/sudharshan_iyer" target="_blank">
+          <a href="https://twitter.com/_sudharti" target="_blank">
             <i class="fa fa-twitter"></i>
           </a>
           <a href="mailto:sudhar.ti@gmail.com">
