--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="https://medium.com/@sudharti" target="_blank">
             <i class="fa fa-medium"></i>
           </a>
-          <a href="https://twitter.com/sudharshan_iyer" target="_blank">
+          <a href="https://twitter.com/_sudharti" target="_blank">
             <i class="fa fa-twitter"></i>
           </a>
           <a data-placement="top" data-toggle="tooltip" href="javascript:void(0);" title="Skype Username - facebook:sudhar.ti">
