--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
           <div class="col-lg-4">
             <h5>
-              <b>FULL STACK DEVELOPER</b>
+              <b>SEEKING FULL-TIME OPPORTUNITIES</b>
             </h5>
             <p>A Full Stack developer who loves to build awesome Web &amp; Mobile apps. A Rubyist riding
               <a href="http://rubyonrails.org/">Rails</a>, Android &amp; Ember.js developer.</p>
