--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h3 class="wh">
           <b>SUDHARSANAN MURALIDHARAN</b>
         </h3>
-        <h5 class="wh">GRAD STUDENT | FULL STACK DEVELOPER</h5>
+        <h5 class="wh">GRAD STUDENT | SEEKING FULL-TIME OPPORTUNITIES</h5>
         <div class="hidden-xs" id="social">
           <a href="https://www.linkedin.com/in/sudharsananm" target="_blank">
             <i class="fa fa-linkedin"></i>
@@ -115,7 +115,7 @@
           </div>
           <div class="col-lg-4">
             <h5>
-              <b>SEEKING FULL-TIME OPPORTUNITIES</b>
+              <b>FULL STACK DEVELOPER</b>
             </h5>
             <p>A Full Stack developer who loves to build awesome Web &amp; Mobile apps. A Rubyist riding
               <a href="http://rubyonrails.org/">Rails</a>, Android &amp; Ember.js developer.</p>
