--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href>SM</a>
+          <a class="navbar-brand" href>SCAFFEINATE</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -63,24 +63,24 @@
         <h3 class="wh">
           <b>SUDHARSANAN MURALIDHARAN</b>
         </h3>
-        <h5 class="wh">GRAD STUDENT | SEEKING FULL-TIME OPPORTUNITIES</h5>
+        <h5 class="wh">FULL STACK DEVELOPER</h5>
         <div class="hidden-xs" id="social">
-          <a href="https://www.linkedin.com/in/sudharsananm" target="_blank">
+          <a href="https://www.linkedin.com/in/sudharm" target="_blank">
             <i class="fa fa-linkedin"></i>
           </a>
-          <a href="https://github.com/sudharti" target="_blank">
+          <a href="https://github.com/scaffeinate" target="_blank">
             <i class="fa fa-github"></i>
           </a>
-          <a href="https://medium.com/@sudharti" target="_blank">
+          <a href="https://medium.com/@scaffeinate" target="_blank">
             <i class="fa fa-medium"></i>
           </a>
-          <a href="https://twitter.com/_sudharti" target="_blank">
+          <a href="https://twitter.com/scaffeinate" target="_blank">
             <i class="fa fa-twitter"></i>
           </a>
           <a data-placement="top" data-toggle="tooltip" href="javascript:void(0);" title="Skype Username - facebook:sudhar.ti">
             <i class="fa fa-skype"></i>
           </a>
-          <a href="https://www.facebook.com/sudharshan.muralidharan" target="_blank">
+          <a href="https://www.facebook.com/scaffeinate" target="_blank">
             <i class="fa fa-facebook"></i>
           </a>
           <a href="mailto:sudhar.ti@gmail.com">
@@ -88,13 +88,13 @@
           </a>
         </div>
         <div class="hidden-sm hidden-md hidden-lg" id="social">
-          <a href="https://www.linkedin.com/in/sudharsananm" target="_blank">
+          <a href="https://www.linkedin.com/in/sudharm" target="_blank">
             <i class="fa fa-linkedin"></i>
           </a>
-          <a href="https://github.com/sudharti" target="_blank">
+          <a href="https://github.com/scaffeinate" target="_blank">
             <i class="fa fa-github"></i>
           </a>
-          <a href="https://twitter.com/_sudharti" target="_blank">
+          <a href="https://twitter.com/scaffeinate" target="_blank">
             <i class="fa fa-twitter"></i>
           </a>
           <a href="mailto:sudhar.ti@gmail.com">
@@ -111,14 +111,21 @@
             <h5>
               <b>GRAD STUDENT</b>
             </h5>
-            <p>Grad Student at The University of Texas, Dallas. Hailing from Chennai, India. Lives in Dallas, TX.</p>
+            <p>Graduated with a Masters in Computer Science from The University of Texas, Dallas.</p>
           </div>
           <div class="col-lg-4">
             <h5>
               <b>FULL STACK DEVELOPER</b>
             </h5>
-            <p>A Full Stack developer who loves to build awesome Web &amp; Mobile apps. A Rubyist riding
-              <a href="http://rubyonrails.org/">Rails</a>, Android &amp; Ember.js developer.</p>
+            <p>A Full Stack Developer who loves to build awesome Web &amp; Mobile apps. A Rubyist riding Rails with a new found Love for Javascript. 
+               A Programming nerd who uses Java for everything else.
+            </p>
+          </div>
+          <div class="col-lg-4">
+            <h5>
+              <b>COMPETETIVE PROGRAMMER</b>
+            </h5>
+            <p>Competitive Programmer with a drive to solve problems.</p>
           </div>
           <div class="col-lg-4">
             <h5>
@@ -134,7 +141,7 @@
         <div class="col-lg-6 col-sm-8 col-xs-10 col-lg-offset-3 col-sm-offset-2 col-xs-offset-1">
           <h4 class="underlined">WORK</h4>
           <p>
-            I have quite a bit of work experience in Software development. Apart from my professional work experience at Tata Consultancy Services and Copart.inc I do have experience as a freelance Rails developer.
+            Software Developer with over 2 years of experience having worked in multiple Firms. Currently working as a Full stack software developer at <a href="http://passportinc.com" target="_blank">Passport.inc</a>
           </p>
         </div>
       </div>
