--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
             <br><br>
             <div class="row wow bounceIn">
               <div class="col-sm-3 col-xs-5 col-sm-offset-0 col-xs-offset-1">
+                <img alt="React" id="js-img" src="assets/img/js.png">
+              </div>
+              <div class="col-sm-3 col-xs-5 col-sm-offset-0 col-xs-offset-1">
                 <img alt="Android" id="android-img" src="assets/img/android.png">
               </div>
               <div class="col-sm-3 col-xs-5 col-sm-offset-0 col-xs-offset-1">
