--- a/index.html
+++ b/index.html
@@ -107,13 +107,7 @@
       <div class="row section">
         <div class="col-lg-8 col-lg-offset-2">
           <h4 class="underlined">ABOUT ME</h4>
-          <div class="col-lg-4">
-            <h5>
-              <b>GRAD STUDENT</b>
-            </h5>
-            <p>Graduated with a Masters in Computer Science from The University of Texas, Dallas.</p>
-          </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <h5>
               <b>FULL STACK DEVELOPER</b>
             </h5>
@@ -121,13 +115,19 @@
                A Programming nerd who uses Java for everything else.
             </p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
+            <h5>
+              <b>GRAD STUDENT</b>
+            </h5>
+            <p>Graduated with a Masters in Computer Science from The University of Texas, Dallas.</p>
+          </div>
+          <div class="col-lg-3">
             <h5>
               <b>COMPETETIVE PROGRAMMER</b>
             </h5>
             <p>Competitive Programmer with a drive to solve problems.</p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <h5>
               <b>GAMER</b>
             </h5>
@@ -141,7 +141,7 @@
         <div class="col-lg-6 col-sm-8 col-xs-10 col-lg-offset-3 col-sm-offset-2 col-xs-offset-1">
           <h4 class="underlined">WORK</h4>
           <p>
-            Software Developer with over 2 years of experience having worked in multiple Firms. Currently working as a Full stack software developer at <a href="http://passportinc.com" target="_blank">Passport.inc</a>
+            Software Developer with over 3 years of experience having worked in multiple Firms. Currently working as a Full stack developer at <a href="http://passportinc.com" target="_blank">Passport Labs</a>
           </p>
         </div>
       </div>
